--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.08.2022 08:49:02</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 17.08.2022 09:10:53</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -130,7 +130,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s grilovanym citronem a hummus dipem, libanonsky krupkovy salat s rajcaty, okurkami a zelenymi bylinkami {L} 155</li><li>Peceny filet z cerstveho candata a okounika s grilovanym citronem a hummus dipem, libanonsky krupkovy salat s rajcaty, okurkami a zelenymi bylinkami {L} 185</li><li>Grilovany indonesky veprovy kebab s arasidovou omackou, jasminova ryze, salatek 155</li><li>Indicke jeleni birjany z basmati ryze se zeleninou a rajcaty, okurkove tzatziki, salatek 179</li><li>Spagety s pecenou maslovou dyni, dynovou omackou, pecenymi baby paprikami a cedarem {L} 155</li></ol>
+<ol><li>Peceny atlanticky hejk s okurkovymi tzatziki, korenena ryze s beluga cockou, salatek 155</li><li>Spagety s cerstvou restovanou sepii, pecenymi baby paprikami, pestem ze susenych rajcat a petrzelkou {L} 175</li><li>Nam Sod – thajsky salat s veprovym masem, cerstvou zeleninou, zelenymi bylinkami, jasminovou ryzi a limetkovou zalivkou, salatek 155</li><li>Smazeny veprovy jazyk, lehky bramborovy salat s cuketami, zelenou cibulkou, petrzelkou a majonezou, citron {L} 169</li><li>Ratatouille z pecene letni zeleniny s cerstvou bazalkou, sazene vejce, pecene brambory, salatek 155</li></ol>
 </td>
 </tr>
 </table>
